--- a/force-app/main/default/classes/presentation/controllers/LoanFormController.cls
+++ b/force-app/main/default/classes/presentation/controllers/LoanFormController.cls
@@ -1,10 +1,10 @@
 public class LoanFormController {
     
     /**
-     * Method exposed to Aura Components to create a loan record
-     * Call LoanService to create the Loan using the loan data
-   	*/
-    
+     * Exposed to Aura Components to create a loan record using loan data.
+     * @param loanData JSON-formatted string containing loan details.
+     * @return ResponseWrapper with success status or error details.
+     */
     @AuraEnabled
     public static LoanController.ResponseWrapper createLoanApex(String loanData) {
         LoanService service = new LoanService();
