--- a/force-app/main/default/classes/repositories/LoanRepository.cls
+++ b/force-app/main/default/classes/repositories/LoanRepository.cls
@@ -3,6 +3,11 @@ public class LoanRepository {
         insert loan;
     }
 
+    /**
+     * Finds and returns a Loan__c record by its ID.
+     * @param loanId The ID of the loan to retrieve.
+     * @return Loan__c instance with specified ID.
+     */
     public Loan__c findById(Id loanId) {
         return [SELECT Id, Loan_Term__c, Principal_Plus_Interest__c, CreatedDate FROM Loan__c WHERE Id = :loanId LIMIT 1];
     }
